--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "ng": "ng",
     "build": "npm run env -s && ng build --prod --output-hashing=none",
     "build:prod": "node --max-old-space-size=16384 ./node_modules/@angular/cli/bin/ng build --prod --output-hashing=none --base-href=\"/web-app/\"",
-    "start": "npm run env -s && ng serve --aot --proxy-config proxy.conf.js",
+    "start": "node server.js",
     "serve:sw": "npm run build -s && npx http-server ./dist -p 4200",
     "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\" --config .htmlhintrc",
     "test": "npm run env -s && ng test",
@@ -22,13 +22,16 @@
     "e2e": "npm run env -s && ng e2e",
     "translations:extract": "ngx-translate-extract --input ./src --output ./src/translations/template.json --format=json --clean -sort --marker extract",
     "docs": "hads ./docs -o",
-    "env": "ngx-scripts env npm_package_version"
+    "env": "ngx-scripts env npm_package_version",
+    "postinstall": "ng build --output-path angularapp  --aot --prod"
   },
   "dependencies": {
     "@angular/animations": "7.2.15",
     "@angular/cdk": "7.3.7",
+    "@angular/cli": "7.3.9",
     "@angular/common": "7.2.15",
     "@angular/compiler": "7.2.15",
+    "@angular/compiler-cli": "7.2.15",
     "@angular/core": "7.2.15",
     "@angular/flex-layout": "7.0.0-beta.24",
     "@angular/forms": "7.2.15",
@@ -44,10 +47,13 @@
     "@ngx-translate/core": "11.0.1",
     "chart.js": "3.0.0-alpha",
     "core-js": "2.5.0",
+    "express": "^4.17.1",
     "hammerjs": "2.0.8",
     "lodash": "4.17.13",
+    "path": "^0.12.7",
     "rxjs": "6.5.2",
     "tslib": "1.9.0",
+    "typescript": "3.2.4",
     "zone.js": "0.8.29"
   },
   "devDependencies": {
@@ -90,7 +96,7 @@
     "url": "https://github.com/openMF/web-app/issues"
   },
   "engines": {
-    "node": ">= 8.9.0",
-    "npm": ">= 5.5.1"
+    "node": "v8.17.0",
+    "npm": "6.13.4"
   }
 }
